--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ button {
     border-radius: 0 0 5px 5px;
 }
 
-.footer__infut{
+.footer__input{
     width: 100%;
     height: 32px;
     border: none;
